--- a/src/css/base.css
+++ b/src/css/base.css
@@ -44,9 +44,7 @@ body,
   left: 0;
   width: 100%;
   height: 100%;
-  padding-top: 1.5rem;
-  padding-left: max(1.2rem, 40/1440 * 100vw);
-  padding-right: max(1.2rem, 40/1440 * 100vw);
+  padding: max(1.2rem, 30/1440 * 100vw);
   z-index: 99;
   pointer-events: none;
 }
@@ -121,8 +119,8 @@ body,
 }
 
 .click__anywhere {
-  position: fixed;
-  bottom: 1.5rem;
+  position: absolute;
+  bottom: max(1.2rem, 30/1440 * 100vw);
   left: 50%;
   transform: translateX(-50%);
   z-index: 999;
