--- a/src/css/base.css
+++ b/src/css/base.css
@@ -44,7 +44,9 @@ body,
   left: 0;
   width: 100%;
   height: 100%;
-  padding: max(1.2rem, 30/1440 * 100vw);
+  padding-left: max(1.2rem, 30/1440 * 100vw);
+  padding-right: max(1.2rem, 30/1440 * 100vw);
+  padding-top: 1.8rem;
   z-index: 99;
   pointer-events: none;
 }
@@ -120,7 +122,7 @@ body,
 
 .click__anywhere {
   position: absolute;
-  bottom: max(1.2rem, 30/1440 * 100vw);
+  bottom: 1.8rem;
   left: 50%;
   transform: translateX(-50%);
   z-index: 999;
